fixed navigation visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,6 +170,7 @@ a.nav__logo:hover {
 
 @media (min-width: 992px) {
     .nav__list-holder {
+        display: block;
         opacity: 1;
         position: static;
         background-color: transparent;
